Users 수정 (프로필이미지/삭제날짜/sns토큰 삭제), 회원서비스 마무리