@@ -9,7 +9,10 @@ import whyzpotato.myreview.security.CustomUserDetails;
 import whyzpotato.myreview.security.JwtTokenProvider;
 
 import java.time.LocalDateTime;
-import java.util.Collections;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
 @Service
 @RequiredArgsConstructor
@@ -22,15 +25,15 @@ public class UsersService {
     /**
      * 회원가입
      */
-    public Long join(String email, String pw, String name) {
+    public Long join(String email, String name, String pw) {
         validateDuplicateUsers(email);
         return usersRepository.save(Users.builder()
-                        .email(email)
-                        .pw(passwordEncoder.encode(pw))
-                        .name(name)
-                        .createDate(LocalDateTime.now())
-                        .roles(Collections.singletonList("ROLE_USER"))
-                        .build()).getId();
+                .email(email)
+                .name(name)
+                .pw(passwordEncoder.encode(pw))
+                .createDate(LocalDateTime.now())
+                .roles(new ArrayList<>(List.of("ROLE_USER")))
+                .build()).getId();
     }
 
     private void validateDuplicateUsers(String email) {
@@ -44,11 +47,39 @@ public class UsersService {
      */
     public String login(String email, String pw) {
         CustomUserDetails users = new CustomUserDetails(usersRepository.findByEmail(email)
-                 .orElseThrow(() -> new IllegalArgumentException("가입되지 않은 이메일입니다.")));
+                .orElseThrow(() -> new IllegalArgumentException("가입되지 않은 이메일입니다.")));
         if (!passwordEncoder.matches(pw, users.getPassword())) {
             throw new IllegalArgumentException("잘못된 비밀번호입니다.");
         }
         return jwtTokenProvider.createToken(users.getUsername(), users.getRoles());
     }
 
+    /**
+     * 회원정보 조회
+     * TODO return DTO
+     */
+    public Map<String, String> findUsersInfo(Long id) {
+        Users users = usersRepository.findById(id).orElseThrow(() -> new IllegalArgumentException("올바르지 않은 시도입니다."));
+        Map<String, String> usersInfo = new HashMap<>();
+        usersInfo.put("email", users.getEmail());
+        usersInfo.put("name", users.getName());
+        return usersInfo;
+    }
+
+    /**
+     * 회원정보 변경
+     */
+    public void updateUsersInfo(Long id, String name, String pw) {
+        Users users = usersRepository.findById(id).orElseThrow(() -> new IllegalArgumentException("올바르지 않은 시도입니다."));
+        users.updateUsersInfo(name, passwordEncoder.encode(pw));
+        usersRepository.save(users);
+    }
+
+    /**
+     * 회원 탈퇴
+     */
+    public void deleteUsers(Long id) {
+        Users users = usersRepository.findById(id).orElseThrow(() -> new IllegalArgumentException("올바르지 않은 시도입니다."));
+        usersRepository.delete(users);
+    }
 }
